fixed typewriter effect alignment straight to top text

--- a/src/presentation/home.css
+++ b/src/presentation/home.css
@@ -96,51 +96,45 @@ html {
 .home-section {
   position: relative;
   z-index: -1;
-  /* background-image: var(--image-gradient), url(../components/assets/images/mountain.jpg); */
+  height: 100vh;
   background-position: top center;
   background-color: black;
   background-repeat: no-repeat;
-  padding-bottom: 30px !important;
-  padding-top: 30px !important;
+
   justify-content: center;
   display: flex;
 }
 
-html {
-  --section-background-color: linear-gradient(
-    to bottom left,
-    rgba(17, 16, 16, 0.582),
-    rgba(12, 8, 24, 0.904)
-  );
-
-  --image-gradient: linear-gradient(
-    to bottom left,
-    rgba(17, 16, 16, 0.678),
-    rgba(12, 10, 22, 0.863)
-  );
-
-  --imp-text-color: #c770f0;
-}
 
 
 .home-content {
-  padding: 14rem 0 2rem !important;
+  padding: 7rem 0 2rem !important;
   color: whitesmoke;
-  text-align: left;
+  /* // text-align: left; */
+
+
 }
+
 .home-header {
   padding-top: 80px !important;
+
 }
 
 .heading {
   font-size: 2.4em !important;
-  padding-left: 450px !important;
+  padding-left: 220px !important;
+
 }
+
 .wave {
-  animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
-  animation-duration: 2.1s; /* Change to speed up or slow down */
-  animation-iteration-count: infinite; /* Never stop waving :) */
-  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+  animation-name: wave-animation;
+  /* Refers to the name of your @keyframes element below */
+  animation-duration: 2.1s;
+  /* Change to speed up or slow down */
+  animation-iteration-count: infinite;
+  /* Never stop waving :) */
+  transform-origin: 70% 70%;
+  /* Pivot around the bottom-left palm */
   display: inline-block;
 }
 
@@ -148,32 +142,44 @@ html {
   0% {
     transform: rotate(0deg);
   }
+
   10% {
     transform: rotate(14deg);
-  } /* The following five values can be played with to make the waving more or less extreme */
+  }
+
+  /* The following five values can be played with to make the waving more or less extreme */
   20% {
     transform: rotate(-8deg);
   }
+
   30% {
     transform: rotate(14deg);
   }
+
   40% {
     transform: rotate(-4deg);
   }
+
   50% {
     transform: rotate(10deg);
   }
+
   60% {
     transform: rotate(0deg);
-  } /* Reset for the last half to pause */
+  }
+
+  /* Reset for the last half to pause */
   100% {
     transform: rotate(0deg);
   }
 }
+
 .heading-name {
-  font-size: 2.5em !important;
+  font-size: 3.3em !important;
   padding-left: 500px !important;
 }
+
 .main-name {
   color: #cd5ff8;
 }
+
